# FastAPI

./: Dockerfile  config-file.cnf  docker-compose.yml  pyproject.toml  run.py
configs/: default.conf  default1.conf  haproxy.cfg  master_postgresql.conf  pg_hba.conf
counter_ms/: Dockerfile  pyproject.toml
counter_ms/db/: init.sql
counter_ms/src/counter_ms/: funcs.py
counter_ms/src/counter_ms/crud/: crud_user.py
counter_ms/src/counter_ms/models/: user_models.py
db/: app.init.lua  init.sql
dialog_ms/: Dockerfile  pyproject.toml
dialog_ms/db/: init.sql
dialog_ms/src/dialog_ms/: __main__.py  funcs.py
dialog_ms/src/dialog_ms/crud/: crud_user.py
dialog_ms/src/dialog_ms/models/: transmitions_models.py
src/test_project/: funcs.py
src/test_project/cache/: cache_functions.py
src/test_project/crud/: crud_user.py
src/test_project/models/: transmitions_models.py
