[tool.poetry]
name = "test_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.2"
pandas = "1.5.2"
fastapi = "^0.88.0"
uvicorn = {extras = ["standart"], version = "^0.20.0"}
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
